[package]
name = "mir-dump"
version = "0.1.0"
authors = ["Vytautas Astrauskas <vastrauskas@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
edition = "2018"

[lib]
name = "mir_dump"
plugin = true

[[bin]]
name = "mir-dump-driver"
test = false
path = "src/driver.rs"

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.5.13"
regex = "1.0.5"
config = "0.9"
lazy_static = "1.0"
getopts = "0.2"
csv = "1.0"
serde = "1.0"
serde_derive = "1.0"
rustc-hash = "1.0.0"
polonius = { git = "https://github.com/rust-lang-nursery/polonius.git" }
polonius-engine = "0.5.0"

[dev-dependencies]
compiletest_rs = "0.3"
